test/invalid/baseline/setlike-2types.txt
Syntax error at line 2 in setlike-2types.widl, since `interface SetLikeTwoTypes`:
  setlike<long, long>;
              ^ Missing greater-than sign `>` in setlike declaration
